--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@astrojs/vercel": "^7.7.2",
     "@fontsource-variable/onest": "5.0.2",
     "@vercel/analytics": "^1.3.1",
-    "astro": "4.4.5",
+    "astro": "^4.11.5",
     "astro-robots-txt": "1.0.0",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3"
